--- a/src/_styles/modules/product/product-detail-gallery.scss
+++ b/src/_styles/modules/product/product-detail-gallery.scss
@@ -6,7 +6,10 @@
   position: relative;
   height: 100vh;
   height: var(#{'--viewport-height'});
-  transition: height 0.8s ease-out;
+
+  @include media-breakpoint-down(md) {
+    transition: height 0.8s ease-out;
+  }
 
   // @include media-breakpoint-up(md) {
   //   width: 100%;
